RESOLVED FIXED311229
VM doesn't reset doesGC when throwing a termination exception
https://bugs.webkit.org/show_bug.cgi?id=311229
Summary VM doesn't reset doesGC when throwing a termination exception
anand_srinivasan
Reported 2026-03-31 15:32:33 PDT
rdar://172191300 When the VM throws a termination exception it doesn't reset VM::m_doesGC, and VM::verifyCanGC() causes a crash if doesGC holds a stale value of false.
Attachments
anand_srinivasan
Comment 1 2026-03-31 15:36:44 PDT
EWS
Comment 2 2026-04-07 10:26:06 PDT
Committed 310722@main (f5b52841f6b5): <https://commits.webkit.org/310722@main> Reviewed commits have been landed. Closing PR #61779 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.